--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ language: d
 d:
   - dmd
 
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -y libsdl2-2.0
+  - sudo apt-get install libsdl2-image-dev
+
 script:
    - dub test -b unittest-cov --compiler=${DC}
 after_success:
