--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y libsdl2-2.0
   - sudo apt-get install libsdl2-image-dev
+  - sudo apt-get install mesa-utils
 
 script:
    - dub test
